--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -2,13 +2,11 @@ body {
   @apply overflow-hidden;
 }
 
-.el-main {
-  padding: 10px !important;
-}
-
-.el-dialog__body {
+.el-dialog__body,
+.el-card__body {
   padding-top: 10px !important;
 }
+
 .el-dialog__header {
   .el-dialog__title {
     font-size: 1rem;
